test_data_ajis/ajis/valid/parser/arrays/a_basic_valid.ajis
[
  1,
  2,
  3,
  10_000,
  0xDEAD_BEEF
]
