test_data_ajis/ajis/invalid/lexer/numbers/n_mixed_separators_invalid_alt_invalid.ajis
[
  1 000,000,
  1_000 000,
  1,000_000
]
